--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%,
     }
 
     .custom-shape-divider-bottom-1671211629 .shape-fill {
-        fill: #2C4EF5;
+        fill: #FFFFFF;
     }
 
     .custom-shape-divider-top-1684434728 {
