--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%,
         left: 40px;
     }
 
-    .custom-shape-divider-bottom-1671211629 {
+/*     .custom-shape-divider-bottom-1671211629 {
         position: absolute;
         bottom: 0;
         left: 0;
@@ -106,8 +106,8 @@ background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%,
     }
 
     .custom-shape-divider-bottom-1671211629 .shape-fill {
-        fill: #FFFFFF;
-    }
+        fill: #2C4EF5;
+    } */
 
     .custom-shape-divider-top-1684434728 {
         position: absolute;
@@ -138,7 +138,7 @@ background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%,
         <div class="box">
             <img src="./img/bot-ia.jpg" class="ia" />
         </div>
-        <div class="custom-shape-divider-bottom-1671211629">
+<!--         <div class="custom-shape-divider-bottom-1671211629">
 
             <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
                 preserveAspectRatio="none">
@@ -152,7 +152,7 @@ background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%,
                     d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z"
                     class="shape-fill"></path>
             </svg>
-        </div>
+        </div> -->
 
         <div class="custom-shape-divider-top-1684434728">
             <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
