--- a/index.html
+++ b/index.html
@@ -170,8 +170,7 @@ background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%,
         </div>
 
     </div>
-    <script type="text/javascript"
-        src="https://cronchatcronapp.cronapp.io/get-chat?token=AAHCQcVoiNk6n3jIiWUlDzQmtTdr1cKmT9Q"></script>
+    <script type="text/javascript" src="https://cronchatnovo.cronapp.io/get-chat?token=30c0f18b7a56b2695bda9203399c06d7"></script>
 
     <body>
     </body>
